--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0"; url=https://bento.me/wiktorcopy />
+  <meta http-equiv="refresh" content="0;url=https://bento.me/wiktorcopy">
 </html>
